# mal

impls/c/: Makefile  main.c
impls/rust/: Cargo.toml  Makefile  run
impls/rust/src/: lib.rs  main.rs  parser.rs  step0.rs  step1.rs
impls/zig/: Makefile  run  shell.nix
impls/zig/src/: main.zig
