[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyline = "14.0.0"
atty = "0.2.14"
nom = { version =  "7.1.3" }
strum = { version = "0.26.3", features = ["derive"] }
test-case = "3.3.1"

[[ bin ]]
name = "step0_repl"
path = "src/step0.rs"

[[ bin ]]
name = "step1_read_print"
path = "src/step1.rs"
